--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -24,7 +24,7 @@
         android:typeface="monospace" />
 
     <ListView
-        android:id="@+id/articleListView"
+        android:id="@+id/tickerList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/homePageLogo"
@@ -36,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:textAlignment="center"
-        android:layout_below="@id/articleListView"
+        android:layout_below="@id/tickerList"
         >
 
         <EditText
