--- a/app/src/main/res/layout/article_row.xml
+++ b/app/src/main/res/layout/article_row.xml
@@ -13,5 +13,18 @@
         android:layout_centerVertical="true"
         android:textColor="#000000"
         android:textSize="20sp"
+        android:layout_marginRight="50dp"
+        />
+
+    <TextView
+        android:id="@+id/scored"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@id/name"
+        android:layout_marginRight="18dp"
+        android:textColor="#000000"
+        android:layout_alignParentRight="true"
+        android:textSize="20sp"
+        android:visibility="visible"
         />
 </RelativeLayout>
