--- a/app/src/main/res/layout/activity_display_articles.xml
+++ b/app/src/main/res/layout/activity_display_articles.xml
@@ -29,6 +29,25 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/displayArticleLogo"
 
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="60dp" />
+
+    <RelativeLayout
+        android:id="@+id/displayScoreLayout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:textAlignment="center"
+        android:layout_below="@id/articleListView"
+        >
+
+        <TextView
+            android:id="@+id/displayScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:ems="10"
+            android:textColor="#000000"
+            android:typeface="monospace"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
